--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -16,7 +16,7 @@
                         <a class="nav-link" th:href="@{/members/new}">회원가입</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">로그인</a>
+                        <a class="nav-link" th:href="@{/members/login}">로그인</a>
                     </li>
 <!--                    <li class="nav-item">-->
 <!--                        <a class="nav-link disabled">Disabled</a>-->
