--- a/src/main/resources/templates/member/memberForm.html
+++ b/src/main/resources/templates/member/memberForm.html
@@ -26,7 +26,7 @@
 
 </th:block>
 
-<div layout:fragment="content" class="container-fluid rounded col-md-5 shadow py-3 px-5" >
+<div layout:fragment="content" class="container-fluid rounded col-md-5 shadow pb-5 px-5" >
 
     <div class="starter-template">
         <h2>회원가입</h2>
@@ -60,8 +60,8 @@
             <input type="text" th:field="*{address}" class="form-control" placeholder="주소를 입력해주세요">
             <p th:if="${#fields.hasErrors('address')}" th:errors="*{address}" class="fieldError">Incorrect data</p>
         </div>
-        <div style="text-align: center">
-            <button type="submit" class="btn btn-primary" style="">가입</button>
+        <div class="mt-5">
+            <button type="submit" class="btn btn-primary w-100">가입</button>
         </div>
         <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
     </form>
