--- a/src/main/resources/templates/member/memberForm.html
+++ b/src/main/resources/templates/member/memberForm.html
@@ -33,7 +33,8 @@
         <p class="lead">스프링 테스트</p>
     </div>
 
-    <form action="/members/new" role="form" method="post"  th:object="${memberFormDto}">
+
+    <form th:action="@{/members/new}" th:method="post"  th:object="${memberFormDto}">
 
 <!-- th:errors
     th:errors는 th:field="*{itemName}"을 이용해
