--- a/src/main/resources/templates/member/memberLoginForm.html
+++ b/src/main/resources/templates/member/memberLoginForm.html
@@ -19,19 +19,19 @@
     <p class="lead">스프링 테스트</p>
   </div>
 
-  <form role="form" method="post" action="/members/login">
+  <form th:method="post" th:action="@{/members/login}">
     <div class="form-group">
       <label th:for="email">이메일주소</label>
-      <input type="email" name="email" class="form-control" placeholder="이메일을 입력해주세요">
+      <input type="email" th:name="email" class="form-control" placeholder="이메일을 입력해주세요">
     </div>
     <div class="form-group">
       <label th:for="password">비밀번호</label>
-      <input type="password" name="password" id="password" class="form-control" placeholder="비밀번호 입력">
+      <input th:type="password" th:name="password" th:id="password" class="form-control" placeholder="비밀번호 입력">
     </div>
     <p th:if="${loginErrorMsg}" class="error" th:text="${loginErrorMsg}"></p>
     <div class="d-flex mt-5 justify-content-center">
       <button class="btn btn-primary col-md-3 mr-2">로그인</button>
-      <button type="button" class="btn btn-primary col-md-3" onClick="location.href='/members/new'">회원가입</button>
+      <button th:type="button" class="btn btn-primary col-md-3" onClick="location.href='/members/new'">회원가입</button>
     </div>
     <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
   </form>
