--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -43,9 +43,9 @@
 <!--                           sec:authorize="isAnonymous()">회원가입</a>-->
 <!--                    </li>-->
 
-<!--                    <li class="nav-item">-->
-<!--                        <a class="nav-link" th:href="@{/members/new}">회원가입</a>-->
-<!--                    </li>-->
+                    <li class="nav-item">
+                        <a class="nav-link" th:href="@{/members/new}">회원가입</a>
+                    </li>
 
                     <li class="nav-item">
                         <a class="nav-link" th:href="@{/members/logout}"
