--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -13,29 +13,29 @@
                         <a class="nav-link" th:href="@{/}">Home <span class="sr-only">(current)</span></a>
                     </li>
 
-                    <li class="nav-item">
+                <!--    <li class="nav-item">
                         <a class="nav-link" th:href="@{/admin/item/new}"
-                        sec:authorize="hasAnyAuthority('ROLE_ADMIN')">상품등록</a> <!--관리자 계정으로 로그인한 경우만 보여줌-->
+                        sec:authorize="hasAnyAuthority('ROLE_ADMIN')">상품등록</a> &lt;!&ndash;관리자 계정으로 로그인한 경우만 보여줌&ndash;&gt;
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" th:href="@{/admin/items}"
-                           sec:authorize="hasAnyAuthority('ROLE_ADMIN')">상품관리</a><!--관리자 계정으로 로그인한 경우만 보여줌-->
-                    </li>
+                           sec:authorize="hasAnyAuthority('ROLE_ADMIN')">상품관리</a>&lt;!&ndash;관리자 계정으로 로그인한 경우만 보여줌&ndash;&gt;
+                    </li>-->
 
-                    <li class="nav-item">
+                    <!--<li class="nav-item">
                         <a class="nav-link" th:href="@{/cart}"
-                           sec:authorize="isAuthenticated()">장바구니</a> <!--로그인 했을 경우만 보여줌-->
-                    </li>
+                           sec:authorize="isAuthenticated()">장바구니</a> &lt;!&ndash; 로그인 했을 경우만 보여줌&ndash;&gt;
+                    </li>-->
 
                     <li class="nav-item">
-                        <a class="nav-link" th:href="@{/orders}"
-                           sec:authorize="isAuthenticated()">구매이력</a> <!--로그인 했을 경우만 보여줌-->
+                        <a class="nav-link" th:href="@{/apiExplorer}"
+                           sec:authorize="isAuthenticated()">대전시 공연정보</a> <!--로그인 했을 경우만 보여줌-->
                     </li>
 
 
                     <li class="nav-item" th:classappend="${currentUrl == '/members/login'}? 'active'">
-                        <a class="nav-link" th:href="@{/members/login}"
-                        sec:authorize="isAnonymous()">로그인</a> <!-- 로그인하지 않은 상태이면 로그인을 보여줌 -->
+                        <a class="nav-link " th:href="@{/members/login}"
+                        sec:authorize="isAnonymous()">로그인/회원가입</a> <!-- 로그인하지 않은 상태이면 로그인을 보여줌 -->
                     </li>
 
 <!--                    <li class="nav-item">-->
@@ -43,31 +43,21 @@
 <!--                           sec:authorize="isAnonymous()">회원가입</a>-->
 <!--                    </li>-->
 
-                    <li class="nav-item">
-                        <a class="nav-link" th:href="@{/members/new}">회원가입</a>
-                    </li>
+<!--                    <li class="nav-item">-->
+<!--                        <a class="nav-link" th:href="@{/members/new}">회원가입</a>-->
+<!--                    </li>-->
 
                     <li class="nav-item">
                         <a class="nav-link" th:href="@{/members/logout}"
                            sec:authorize="isAuthenticated()">로그아웃</a> <!--로그인한 상태이면 로그아웃을 보여줌-->
                     </li>
-<!--                    <li class="nav-item">-->
-<!--                        <a class="nav-link disabled">Disabled</a>-->
-<!--                    </li>-->
-<!--                    <li class="nav-item dropdown">-->
-<!--                        <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-expanded="false">로그인</a>-->
-<!--                        <div class="dropdown-menu" aria-labelledby="dropdown01">-->
-<!--                            <a class="dropdown-item" href="#">Action</a>-->
-<!--                            <a class="dropdown-item" href="#">Another action</a>-->
-<!--                            <a class="dropdown-item" href="#">Something else here</a>-->
-<!--                        </div>-->
-<!--                    </li>-->
+
                     </th:block>
                 </ul>
-                <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-                </form>
+<!--                <form class="form-inline my-2 my-lg-0">-->
+<!--                    <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">-->
+<!--                    <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>-->
+<!--                </form>-->
             </div>
         </nav>
 
